# Pipelines

./: .gitignore  pyproject.toml  start_jupyter.sh
UCFatigue/: FATIGUE.md
UCFatigue/datasets/: Subset_Surrogate_Factory.xlsx
UCFatigue/pipeline/: SF_1_Requirements.ipynb  SF_2_Data_Acquisition.ipynb  SF_3_Data_Cleaning.ipynb  SF_4_Data_Partitioning.ipynb  SF_5_Feature_Selection.ipynb  SF_6_Model_Selection.ipynb  SF_7_Model_Training.ipynb  SF_8_Model_Deployment.ipynb  SF_9_Model_Validation.ipynb  UCFatigue.pipeline  _run_validation_report.py  pipeline_config.yaml  run_pipeline.py
examples/: SF_10_Storage.ipynb  SF_1_Requirements.ipynb  SF_3_Data_Cleaning.ipynb  SF_4_Data_Partitioning.ipynb  SF_6_Model_Selection.ipynb  SF_7_Model_Training.ipynb  SF_8_Model_Deployment.ipynb  SF_9_Model_Validation.ipynb  Surrogate_Factory-input_data.pipeline  pipeline_config.yaml
examples/metadata/: SF_1_Requirements.yaml  SF_2_Data_Acquisition_Generation.yaml  SF_2_Data_Acquisition_Generation.yaml_  SF_3_Data_Cleansing.yaml  SF_5_Feature_Selection.yaml  SF_6_Model_Selection.yaml  SF_9_Model_Validation.yaml
src/surrogate_factory/: __init__.py  build.py  metadata.py  version.py  workflow.py
validationlib/: __init__.py  __main__.py
validationlib/engine/: __init__.py  common.py  validator.py  vltools.py
validationlib/misc/: __init__.py  convexhull.py  explainability.py  metrics.py  preprocessing.py  split_validation.py  stress_check.py  subsampling.py  utils.py
validationlib/models/: __init__.py  autoencoder.py  base.py  catEncoders.py  feedforward.py  pca.py  scalers.py  (+2 more)
(+122 files in other folders)
